Fix text and icon overlapping in the pattern header (boo#1176530)

Work around QTBUG-86671 by force-disabling wrapping for the image.